--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Aref+Ruqaa+Ink&display=swap');
-
-@import url('nth-child.css');
 @import url('bootstrap-5.css');
+@import url('nth-child.css');
+@import url('bootstrap-exsample.css');
 
 
 :root{
